first update after initial meeting with JB

--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -15,8 +15,8 @@
 <div>
     <h3>1. Patient - Visit Request</h3> 
     <ol>
-        <li>Click “request appointment" </li>
-        <li>Receive initial subscriber e-mail: <a href="./Welcome Email Template.html"  target="_blank">[E-mail Template]</a></li>
+        <li>Any indication of interest, entry from marketing funnel (e-mail, webform, phone or text) </li>
+        <li>Receive initial welcome email e-mail: <a href="./Welcome Email Template.html"  target="_blank">[E-mail Template]</a></li>
         <li>Fill out basic <a href="https://forms.gle/xRUep1faU7LKbys69" target="_blank">contact info form</a></li>
     </ol>
 </div>
