--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
                 <a href="" target="_blank"><li>HelloSign Legal Documents Process</li></a> 
             </ul>
             <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit</a></p>
+            <p><a href="">Concierge FAQ</a></p>
         </div>
         <div>
             <h1>NP Documents</h1>
+            <p><a href="">NP FAQ</a></p>
         </div>
         <div>
             <h1>Mental Health Documents</h1>
+            <p><a href="">MH FAQ</a></p>
         </div>
         <div>
             <h1>Dietician Documents</h1>
+            <p><a href="">Dietician FAQ</a></p>
         </div>
         <div>
             <h3>Documents Remaining to be completed for v1.0:</h3>
@@ -36,7 +40,6 @@
                 <li>Concierge/Door-To-First Visit: E-mail Template, pre-booking confirmation</li>
                 <li>Concierge/Door-To-First Visit: E-mail Template, post-booking confirmation with legal docs</li>
                 <li>Concierge/Door-To-First Visit: HelloSign Process and Setup</li>
-                <li></li>
             </ul>
         </div>
         <Footer>
