small updates to the DTF page

--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -30,8 +30,17 @@
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient selection.png" />
         <li>Complete all necessary fields</li>
         <li>Reply to patient using preferred method of communication <a href="" target="_blank">[Phone Script]</a><a href=""  target="_blank">[E-mail Template]</a></li>
-
     </ol>
+    <div>
+        <p>Useful links for patient chart management to CHR documentation:</p>
+        <ul>
+            <a href="http://help.inputhealth.com/en/articles/5170925-viewing-patient-charts#h_2045362376" target="_blank"><li>Viewing patient charts</li></a>
+            <a href="https://intercom.help/inputhealth/en/articles/1454466-customizing-the-patient-summary" target="_blank"><li>Customizing the patient summary</li></a>
+            <a href="https://intercom.help/inputhealth/en/articles/1465473-customizing-the-patient-dashboard" target="_blank"><li>Customizing the patient dashboard</li></a>
+            <a href="https://help.inputhealth.com/en/articles/4457482-customizing-the-patient-data-header" target="_blank"><li>Customizing the patient data header</li></a>
+            <a href="https://intercom.help/inputhealth/en/articles/3273042-viewing-and-updating-entries-in-the-patient-data-section" target="_blank"><li>Viewing and updating entries in the patient data</li></a>
+        </ul>
+    </div>
 </div>
 <div>
     <h3>3. Patient - Booking Confirmation</h3>
