--- a/Concierge Docs/ConciergeFirstVisit.html
+++ b/Concierge Docs/ConciergeFirstVisit.html
@@ -24,13 +24,14 @@
     <div>
         <h2>Concierge First Visit Checklist</h2>
         <input type="checkbox">1. Confirm spelling of name, email address and phone numbers</input><br>
-        <input type="checkbox">2. Slide Show Presentation About the 12-Month Program</input><a href="" target="_blank">[Google Slides Link]</a><br>
-        <input type="checkbox">3. Ask if they have any questions</input><br>
-        <input type="checkbox">4. Confirm patient is interested in subscriing, send and confirm payment email/link sent to patient</input><br>
-        <input type="checkbox">5. Book the initial visits with NP, followed by the mental health counsellor and dietician</input><br>
-        <input type="checkbox">6. Conclude the meeting</input><br>
-        <input type="checkbox">7. Schedule in CHR the initial questionnaires</input><br>
-        <p>CHR SCREENSHOT HERE</p>
+        <input type="checkbox">2. Confirm completion and receipt of legal documents</input><br>
+        <input type="checkbox">3. Slide Show Presentation About the 12-Month Program</input><a href="" target="_blank">[Google Slides Link]</a><br>
+        <input type="checkbox">4. Ask if they have any questions</input><br>
+        <input type="checkbox">5. Confirm patient is interested in subscribing, send and confirm payment email/link sent to patient</input><br>
+        <input type="checkbox">6. Book the initial visits with NP, followed by the mental health counsellor and dietician</input><br>
+        <input type="checkbox">7. alert patient that they will be receiving some pre work for their N1 visit in the appt booking email </input><br>
+        <input type="checkbox">8. Conclude the meeting</input><br>
+        <input type="checkbox">9. Schedule in CHR the initial questionnaires</input><br>
     </div>
 </main>
 </html>
