added C1 phone and email templates

--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -29,7 +29,7 @@
         <li>Click on "New Patient" in the upper right hand corner:</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient selection.png" />
         <li>Complete all necessary fields</li>
-        <li>Reply to patient using preferred method of communication <a href="" target="_blank">[Phone Script]</a><a href=""  target="_blank">[E-mail Template]</a></li>
+        <li>Reply to patient using preferred method of communication <a href="./PhoneScriptC1.html" target="_blank">[Phone Script]</a><a href="./EmailTemplateC1.html"  target="_blank">[E-mail Template]</a></li>
     </ol>
     <div>
         <p>Useful links for patient chart management to CHR documentation:</p>
