minor href link updates

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <p>Associated Files:</p>
             <ul>
                 <a href="./Concierge Docs/Welcome Email Template.html" target="_blank"><li>Initial Subscriber Welcome Email</li></a> 
-                <a href="" target="_blank"><li>Pre-Booking Confirmation Phone Script</li></a> 
-                <a href="" target="_blank"><li>Pre-Booking Confirmation Email Template</li></a> 
+                <a href="./Concierge Docs/PhoneScriptC1.html" target="_blank"><li>Pre-Booking Confirmation Phone Script</li></a> 
+                <a href="./Concierge Docs/EmailTemplateC1.html" target="_blank"><li>Pre-Booking Confirmation Email Template</li></a> 
                 <a href="" target="_blank"><li>Post-Booking Confirmation Email Template</li></a> 
                 <a href="" target="_blank"><li>HelloSign Legal Documents Process</li></a> 
             </ul>
