--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
             <p><a href="">Dietician FAQ</a></p>
         </div>
         <div>
-            <h3>Documents Remaining to be completed for v1.0:</h3>
+            <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
             <ul>
-                <li>Concierge/Door-To-First Visit: Phone Script, pre-booking confirmation</li>
-                <li>Concierge/Door-To-First Visit: E-mail Template, pre-booking confirmation</li>
                 <li>Concierge/Door-To-First Visit: E-mail Template, post-booking confirmation with legal docs</li>
                 <li>Concierge/Door-To-First Visit: HelloSign Process and Setup</li>
             </ul>
