--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -10,7 +10,7 @@
     <button class="homebutton"><a href="../index.html">Home</a></button>
     <h1>Funnel-to-First Concierge Appointment Workflow</h1>
        <h2>Authors: J Bawden and A Hofmann</h2>
-       <h2>Last Update: Dec 4 2024</h2>
+       <h2>Last Update: Dec 12 2024</h2>
 
 <div>
     <h3>1. Patient - Visit Request</h3> 
@@ -45,27 +45,33 @@
 <div>
     <h3>3. Patient - Booking Confirmation</h3>
     <ol>
-        <li>Provides information on timeslots for first visit</li>
+        <li>Provides information on timeslots for first visit, via preferred method of communication (email or phone call)</li>
+        <li>If patient does not respond within 3 business days, reach out via phone directly to patient</li>
     </ol>
 </div>
 <div>
     <h3>4. Concierge - Pre-Visit Paperwork (Estimated Time: 5-10 minutes)</h3>
     <ol>
-        <li>Obtain timeslots for initial visit</li>
-        <li>Book the initial appointment by selecting the appropriate timeslot/visit type/duration from the "Calendar" section of the CHR platform:</li>
+        <li>Obtain timeslots for initial visit (CHR inbox or phone call)</li>
+        <li>Book the initial appointment by selecting: <br> 
+            a) Time slot <br>
+            b) Choose "Virtual" <br> 
+            c) Appointment type "Concierge" <br>
+            d) Choose "Presenting Issue" as "Concierge Initial Visit" <br>
+             from the "Calendar" section of the CHR platform:</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
         <li>Patient will have automated message from CHR platform confirming their appointment</li>
-        <li>Send separate email <a href="" target="_blank">[E-mail Template]</a> with confirmation of times, provider and the onboarding package including HelloSign <a href="" target="_blank">"Application Form"</a> and <a href="" target="_blank">"Terms and Conditions"</a></li>
+        <li>Send separate email with the onboarding package using HelloSign <a href="" target="_blank">"Application Form"</a> and <a href="" target="_blank">"Terms and Conditions"</a></li>
     </ol>
 </div>
 <div>
     <h3>5. Patient - Pre-Visit Paperwork Completion</h3>
     <ol>
-        <li>Fill out the Application Form</li>
+        <li>E-Sign the Application Form</li>
     </ol>
 </div>
 <div>
-    <h3>6. Concierge -  First Visit</h3>
+    <h3>6. Concierge -  First Visit (C1)</h3>
     <p>If patient has not filled out the legal documents, this must be reviewed at the time of the first meeting</p>
     <p><a href="./ConciergeFirstVisit.html" target="_blank">[Go To First Visit]</a></p>
 </div>
