--- a/index.html
+++ b/index.html
@@ -20,27 +20,39 @@
             </ul>
             <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit</a></p>
             <p><a href="">Concierge FAQ</a></p>
+            <p><a href="">Concierge Daily Task List</a></p>
+            <p><a href="">Concierge Monthly Task List</a></p>
+            <p><a href="">Concierge Quarterly Task List</a></p>
         </div>
         <div>
             <h1>NP Documents</h1>
             <p><a href="">NP FAQ</a></p>
+            <p><a href="">NP Daily Task List</a></p>
+            <p><a href="">NP Monthly Task List</a></p>
+            <p><a href="">NP Quarterly Task List</a></p>
         </div>
         <div>
             <h1>Mental Health Documents</h1>
             <p><a href="">MH FAQ</a></p>
+            <p><a href="">MH Daily Task List</a></p>
+            <p><a href="">MH Monthly Task List</a></p>
+            <p><a href="">MH Quarterly Task List</a></p>
         </div>
         <div>
-            <h1>Dietician Documents</h1>
-            <p><a href="">Dietician FAQ</a></p>
+            <h1>Dietitian Documents</h1>
+            <p><a href="">Dietitian FAQ</a></p>
+            <p><a href="">Dietitian Daily Task List</a></p>
+            <p><a href="">Dietitian Monthly Task List</a></p>
+            <p><a href="">Dietitian Quarterly Task List</a></p>
         </div>
         <div>
             <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
             <ul>
-                <li>Concierge/Door-To-First Visit: E-mail Template, post-booking confirmation with legal docs</li>
                 <li>Concierge/Door-To-First Visit: HelloSign Process and Setup</li>
             </ul>
         </div>
         <Footer>
+            <p style="font-size: small;">Last Update Dec 12 2024 // AH</p>
             <script type="text/javascript" src=""></script>
         </Footer>
     </body>
