change in C1toNP1

--- a/Concierge Docs/ConciergeFirstVisit.html
+++ b/Concierge Docs/ConciergeFirstVisit.html
@@ -28,10 +28,10 @@
         <input type="checkbox">3. Slide Show Presentation About the 12-Month Program</input><a href="" target="_blank">[Google Slides Link]</a><br>
         <input type="checkbox">4. Ask if they have any questions</input><br>
         <input type="checkbox">5. Confirm patient is interested in subscribing, send and confirm payment email/link sent to patient</input><br>
-        <input type="checkbox">6. Book the initial visits with NP, followed by the mental health counsellor and dietician</input><br>
-        <input type="checkbox">7. alert patient that they will be receiving some pre work for their N1 visit in the appt booking email </input><br>
-        <input type="checkbox">8. Conclude the meeting</input><br>
-        <input type="checkbox">9. Schedule in CHR the initial questionnaires</input><br>
+        <input type="checkbox">6. Book the initial visits with NP (NP1), automated message with Qnaire</input><br>
+        <input type="checkbox">7. Manually attach MOHLTC Lab requisition Form entitled "First Visit with Nurse Practitioner"</input><br>
+        <input type="checkbox">8. alert patient that they will be receiving some pre work for their N1 visit in the appt booking email </input><br>
+        <input type="checkbox">9. Conclude the meeting (Ask if the patient has any questions)</input><br>
     </div>
 </main>
 <footer>
