--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <Footer>
-            <p style="font-size: small;">Last Update Dec 12 2024 // AH</p>
+            <p style="font-size: small">Last Update Dec 12 2024 // AH</p>
             <script type="text/javascript" src=""></script>
         </Footer>
     </body>
