--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div>
             <h1>Concierge Documents</h1>
             <p><a href="./Concierge Docs/DoortoFirstVisit.html">Door-to-First-Concierge-Visit Process</a></p>
+            <p><a href="./Concierge Docs/ConciergeToDo.html">Concierge To Do List</a></p>
             <p>Associated Files:</p>
             <ul>
                 <a href="./Concierge Docs/Welcome Email Template.html" target="_blank"><li>Initial Subscriber Welcome Email</li></a> 
