--- a/Concierge Docs/ConciergeToDo.html
+++ b/Concierge Docs/ConciergeToDo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../Resources/CSS/index.css" type="text/css" rel="stylesheet">
-        <title>First Visit - Concierge</title>
+        <title>Concierge - To Do</title>
     </head>
 <main>
     <button class="homebutton"><a href="../index.html">Home</a></button>
@@ -17,9 +17,14 @@
         <li>Inbox Window => Filter Icon => Labs => Messages => Qnaire responses for their team. Review.</li>
         <li>Review Daily Labs for Urgent Values for their NP</li>
         <li>Review Personal CHR and Bravella Inboxes for correspondence from patients. Respond</li>
-        <li></li>
+        <li>Check "requested appointments" and confirm them in CHR schedule view</li>
     </ul>
     <h1>Weekly</h1>
     <h1>Monthly</h1>
+    <ul>
+        <li>Check that all patients are up to date in payments (day after automatic pay cycle, eg: 11th day of the month)</li>
+    </ul>
+    <h1>Quarterly</h1>
+    <h1>Annually</h1>
 
 </main>
