--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div>
             <h1>Concierge Documents</h1>
             <p><a href="./Concierge Docs/DoortoFirstVisit.html">Door-to-First-Concierge-Visit Process</a></p>
+            <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit Documentation</a></p>
+            <p><a href="./Concierge Docs/C1toNP1.html">C1 to NP1 Process</a></p>
+
             <p><a href="./Concierge Docs/ConciergeToDo.html">Concierge To Do List</a></p>
             <p>Associated Files:</p>
             <ul>
