--- a/Concierge Docs/ConciergeFirstVisit.html
+++ b/Concierge Docs/ConciergeFirstVisit.html
@@ -36,5 +36,6 @@
 </main>
 <footer>
     <p>Insert print button here</p>
+    <p><a href="./C1toNP1.html">C1 to NP1 Process</a></p>
 </footer>
 </html>
