--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -55,12 +55,12 @@
         <li>Obtain timeslots for initial visit (CHR inbox or phone call)</li>
         <li>Book the initial appointment by selecting: <br> 
             a) Time slot <br>
-            b) Choose "Virtual" <br> 
+            b) Choose "Physical" (So the patient does not receive CHR link) <br> 
             c) Appointment type "Concierge" <br>
             d) Choose "Presenting Issue" as "Concierge Initial Visit" <br>
              from the "Calendar" section of the CHR platform:</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
-        <li>Patient will have automated message from CHR platform confirming their appointment</li>
+        <li>Create a Google Calendar meeting in Bravella Calendar. Authorize Google Meet. Add patient email as the invited guest so they receive the link.</li>
         <li>Send separate email with the onboarding package using HelloSign <a href="" target="_blank">"Application Form"</a> and <a href="" target="_blank">"Terms and Conditions"</a></li>
     </ol>
 </div>
