minor changes to dtofv

--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -30,6 +30,8 @@
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient selection.png" />
         <li>Complete all necessary fields</li>
         <li>Reply to patient using preferred method of communication <a href="./PhoneScriptC1.html" target="_blank">[Phone Script]</a><a href="./EmailTemplateC1.html"  target="_blank">[E-mail Template]</a></li>
+        <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/unnamed.png" />
+        <p>Edit the Name of the provider. Include the 3 next available options in schedule (date and time). SEND </p>
     </ol>
     <div>
         <p>Useful links for patient chart management to CHR documentation:</p>
@@ -55,12 +57,13 @@
         <li>Obtain timeslots for initial visit (CHR inbox or phone call)</li>
         <li>Book the initial appointment by selecting: <br> 
             a) Time slot <br>
-            b) Choose "Physical" (So the patient does not receive CHR link) <br> 
+            b) Choose "Physical" (So the patient does not receive CHR lin, as we are using Google Meet for the moment) <br> 
             c) Appointment type "Concierge" <br>
             d) Choose "Presenting Issue" as "Concierge Initial Visit" <br>
              from the "Calendar" section of the CHR platform:</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
         <li>Create a Google Calendar meeting in Bravella Calendar. Authorize Google Meet. Add patient email as the invited guest so they receive the link.</li>
+        <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/email2.png" />
         <li>Send separate email with the onboarding package using HelloSign <a href="" target="_blank">"Application Form"</a> and <a href="" target="_blank">"Terms and Conditions"</a></li>
     </ol>
 </div>
