added initial formulary

--- a/Concierge Docs/ConciergeToDo.html
+++ b/Concierge Docs/ConciergeToDo.html
@@ -20,6 +20,8 @@
         <li>Check "requested appointments" and confirm them in CHR schedule view</li>
     </ul>
     <h1>Weekly</h1>
+        <p>Sunday Evening - Verify, for all providers (filtered) that all Qnaires have been completed. If outstanding, write standard contact to patient to remind uncompleted Qnaire patients to go ahead and complete.</p>
+        <img src="../Resources/Assets/Concierge Images/Questionnaire uncompleted.png" />
     <h1>Monthly</h1>
     <ul>
         <li>Check that all patients are up to date in payments (day after automatic pay cycle, eg: 11th day of the month)</li>
