--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
             <p><a href="">Dietitian Quarterly Task List</a></p>
         </div>
         <div>
+            <h2>Proposed Formulary by Condition</h2>
+            <h3>MHT</h3>
+                <ol>
+                    <li></li>
+                </ol>
+            <h3>Dyslipidemia</h3>
+                <ol>
+                    <li>Rosuvastatin or Atorvastatin</li>
+                    <li>Pravastatin</li>
+                    <li>Ezetimibe</li>
+                    <li>Biologics:</li>
+                </ol>
+            <h3>Hypertension</h3>
+                <ol>
+                    <li></li>
+                </ol>
+            <h3>Smoking Cessation</h3>
+                <ol>
+                    <li></li>
+                </ol>
+            <h3>Osteoporosis</h3>
+                <ol>
+                    <li>Vitamin D 10,000 iu po weekly</li>
+                    <li>Alendronate 70mg po weekly, or Risedronate 35mg po weekly</li>
+                    <li>Denosumab 60mg sc once every 6 months</li>
+                    <li>Romosozumab</li>
+                </ol>
+        </div>
+        <div>
             <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
             <ul>
                 <li>Concierge/Door-To-First Visit: HelloSign Process and Setup</li>
