--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div>
             <h1>NP Documents</h1>
+            <p><a href="./NP Docs/Formulary.html">Proposed Formulary, by Diagnosis</a></p>
             <p><a href="">NP FAQ</a></p>
             <p><a href="">NP Daily Task List</a></p>
             <p><a href="">NP Monthly Task List</a></p>
@@ -48,35 +49,6 @@
             <p><a href="">Dietitian Daily Task List</a></p>
             <p><a href="">Dietitian Monthly Task List</a></p>
             <p><a href="">Dietitian Quarterly Task List</a></p>
-        </div>
-        <div>
-            <h2>Proposed Formulary by Condition</h2>
-            <h3>MHT</h3>
-                <ol>
-                    <li></li>
-                </ol>
-            <h3>Dyslipidemia</h3>
-                <ol>
-                    <li>Rosuvastatin or Atorvastatin</li>
-                    <li>Pravastatin</li>
-                    <li>Ezetimibe</li>
-                    <li>Biologics:</li>
-                </ol>
-            <h3>Hypertension</h3>
-                <ol>
-                    <li></li>
-                </ol>
-            <h3>Smoking Cessation</h3>
-                <ol>
-                    <li></li>
-                </ol>
-            <h3>Osteoporosis</h3>
-                <ol>
-                    <li>Vitamin D 10,000 iu po weekly</li>
-                    <li>Alendronate 70mg po weekly, or Risedronate 35mg po weekly</li>
-                    <li>Denosumab 60mg sc once every 6 months</li>
-                    <li>Romosozumab</li>
-                </ol>
         </div>
         <div>
             <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
