--- a/index.html
+++ b/index.html
@@ -24,31 +24,26 @@
             </ul>
             <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit</a></p>
             <p><a href="">Concierge FAQ</a></p>
-            <p><a href="">Concierge Daily Task List</a></p>
-            <p><a href="">Concierge Monthly Task List</a></p>
-            <p><a href="">Concierge Quarterly Task List</a></p>
+            <p><a href="./Concierge Docs/ConciergeToDo.html">Concierge Task List</a></p>
+           
         </div>
         <div>
             <h1>NP Documents</h1>
             <p><a href="./NP Docs/Formulary.html">Proposed Formulary, by Diagnosis</a></p>
             <p><a href="">NP FAQ</a></p>
-            <p><a href="">NP Daily Task List</a></p>
-            <p><a href="">NP Monthly Task List</a></p>
-            <p><a href="">NP Quarterly Task List</a></p>
+            <p><a href="">NP Task List</a></p>
         </div>
         <div>
             <h1>Mental Health Documents</h1>
             <p><a href="">MH FAQ</a></p>
-            <p><a href="">MH Daily Task List</a></p>
-            <p><a href="">MH Monthly Task List</a></p>
-            <p><a href="">MH Quarterly Task List</a></p>
+            <p><a href="">MH Task List</a></p>
+
         </div>
         <div>
             <h1>Dietitian Documents</h1>
             <p><a href="">Dietitian FAQ</a></p>
-            <p><a href="">Dietitian Daily Task List</a></p>
-            <p><a href="">Dietitian Monthly Task List</a></p>
-            <p><a href="">Dietitian Quarterly Task List</a></p>
+            <p><a href="">Dietitian Task List</a></p>
+       
         </div>
         <div>
             <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
