Added HelloSign Process

--- a/Concierge Docs/ConciergeToDo.html
+++ b/Concierge Docs/ConciergeToDo.html
@@ -18,6 +18,7 @@
         <li>Review Daily Labs for Urgent Values for their NP</li>
         <li>Review Personal CHR and Bravella Inboxes for correspondence from patients. Respond</li>
         <li>Check "requested appointments" and confirm them in CHR schedule view</li>
+        <li>Check outstanding <a href="./HelloSignLegalProcess.html" target="_blank">HelloSign legal doc</a> signatures pending. If greater than 72h send follow up email to patient.</li>
     </ul>
     <h1>Weekly</h1>
         <p>Sunday Evening - Verify, for all providers (filtered) that all Qnaires have been completed. If outstanding, write standard contact to patient to remind uncompleted Qnaire patients to go ahead and complete.</p>
