--- a/Concierge Docs/DoortoFirstVisit.html
+++ b/Concierge Docs/DoortoFirstVisit.html
@@ -64,7 +64,7 @@
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/New patient scheduling calendar.png" />
         <li>Create a Google Calendar meeting in Bravella Calendar. Authorize Google Meet. Add patient email as the invited guest so they receive the link.</li>
         <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/email2.png" />
-        <li>Send separate email with the onboarding package using HelloSign <a href="" target="_blank">"Application Form"</a> and <a href="" target="_blank">"Terms and Conditions"</a></li>
+        <li>Send separate email with the onboarding package using HelloSign <a href="./HelloSignLegalProcess.html" target="_blank">"Application Form" and "Terms and Conditions"</a></li>
     </ol>
 </div>
 <div>
