--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="./Concierge Docs/PhoneScriptC1.html" target="_blank"><li>Pre-Booking Confirmation Phone Script</li></a> 
                 <a href="./Concierge Docs/EmailTemplateC1.html" target="_blank"><li>Pre-Booking Confirmation Email Template</li></a> 
                 <a href="" target="_blank"><li>Post-Booking Confirmation Email Template</li></a> 
-                <a href="" target="_blank"><li>HelloSign Legal Documents Process</li></a> 
+                <a href="./Concierge Docs/HelloSignLegalProcess.html" target="_blank"><li>HelloSign Legal Documents Process</li></a> 
             </ul>
             <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit</a></p>
             <p><a href="">Concierge FAQ</a></p>
@@ -46,13 +46,11 @@
        
         </div>
         <div>
-            <h3>Documents Remaining to be completed for Sprint 1 Dec 1-14 2024:</h3>
-            <ul>
-                <li>Concierge/Door-To-First Visit: HelloSign Process and Setup</li>
-            </ul>
+            <h3>Documents Remaining to be completed for Sprint 2:</h3>
+          
         </div>
         <Footer>
-            <p style="font-size: small">Last Update Dec 12 2024 // AH</p>
+            <p style="font-size: small">Last Update Dec 24 2024 // AH</p>
             <script type="text/javascript" src=""></script>
         </Footer>
     </body>
