--- a/Concierge Docs/ConciergeFirstVisit.html
+++ b/Concierge Docs/ConciergeFirstVisit.html
@@ -24,7 +24,7 @@
     <div>
         <h2>Concierge First Visit Checklist</h2>
         <input type="checkbox">1. Confirm spelling of name, email address and phone numbers</input><br>
-        <input type="checkbox">2. Confirm completion and receipt of legal documents (Check in HelloSign Account)</input><br>
+        <input type="checkbox">2. Confirm completion and receipt of legal documents (<a href="./HelloSignLegalProcess.html" target="_blank">Check in HelloSign Account</a>)</input><br>
         <input type="checkbox">3. Slide Show Presentation About the 12-Month Program</input><a href="" target="_blank">[Google Slides Link]</a><br>
         <input type="checkbox">4. Ask if they have any questions</input><br>
         <input type="checkbox">5. Confirm patient is interested in subscribing, send and confirm payment email/link sent to patient</input><br>
