Concierge Onboarding Process

--- a/Concierge Docs/PhoneScriptC1.html
+++ b/Concierge Docs/PhoneScriptC1.html
@@ -26,7 +26,7 @@
                 ___________</p>
                 <p>
                     If none are possible, ask: is there a day of the week or time of day that works best for you?
-                    [Find opening and book]</p>
+                    <a href="https://app.screencast.com/h6bC00ic6h7zH" target="_blank">[Link to CHR Documentation on How to Book an Appointment for New Patient]</a></p>
         <p>
             Great! From here, you will receive an email with a link to your first concierge appointment which you just click on at the time its scheduled for.  
             So great to speak with you - thank you from Bravella Health - have a great day! </p>
