--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <a href="./Concierge Docs/Welcome Email Template.html" target="_blank"><li>Initial Subscriber Welcome Email</li></a> 
                 <a href="./Concierge Docs/PhoneScriptC1.html" target="_blank"><li>Pre-Booking Confirmation Phone Script</li></a> 
                 <a href="./Concierge Docs/EmailTemplateC1.html" target="_blank"><li>Pre-Booking Confirmation Email Template</li></a> 
-                <a href="" target="_blank"><li>Post-Booking Confirmation Email Template</li></a> 
+                <a href="./Concierge Docs/CHRBasics.html" target="_blank"><li>CHR Basics Course</li></a> 
                 <a href="./Concierge Docs/HelloSignLegalProcess.html" target="_blank"><li>HelloSign Legal Documents Process</li></a> 
             </ul>
+            <p><a href="./Concierge Docs/ConciergeOnboardingProcess.html">Concierge Onboarding Process</a></p>
             <p><a href="./Concierge Docs/ConciergeFirstVisit.html">Concierge First Visit</a></p>
             <p><a href="">Concierge FAQ</a></p>
             <p><a href="./Concierge Docs/ConciergeToDo.html">Concierge Task List</a></p>
