cosmetic changes to CHR basics

--- a/Concierge Docs/CHRBasics.html
+++ b/Concierge Docs/CHRBasics.html
@@ -10,11 +10,15 @@
     <h1>Checklist to Learn CHR Platform for New Concierges</h1>
     <ol>
         <li>Login to CHR using your Bravella email and username as provided by your supervisor</li>
-        <li><input type="checkbox">Login and set settings: <a href="https://app.screencast.com/C5bHF9yvShw6G" target="_blank">Profile</a>> and <a href="https://help.inputhealth.com/en/articles/5389957-modifying-your-user-preferences" target="_blank">Security Preferences </a><a href="https://app.screencast.com/M5zOdAOcNwINN" target="_blank">Logging In and Basic System
+        <li><input type="checkbox">Login and set settings: <br> 
+            <a href="https://app.screencast.com/C5bHF9yvShw6G" target="_blank">Profile</a> <br>
+            <a href="https://help.inputhealth.com/en/articles/5389957-modifying-your-user-preferences" target="_blank">Security Preferences </a> <br> 
+            <a href="https://app.screencast.com/M5zOdAOcNwINN" target="_blank">Logging In and Basic System
             Navigation</a>
         </li>
         <li>
-            <input type="checkbox"><a href="https://intercom.help/inputhealth/en/articles/5149714-adding-patients" target="_blank">Adding New Patients</a> 
+            <input type="checkbox"> Adding New Patients: <br>
+            <a href="https://intercom.help/inputhealth/en/articles/5149714-adding-patients" target="_blank">Adding New Patients</a> 
         </li>
         <li>
             <input type="checkbox"> Navigating the patient chart: <br>
