first iteration of menopause quiz

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <h3>Documents Remaining to be completed for Sprint 2:</h3>
           
         </div>
+        <div>
+            <h3>Marketing Resources</h3>
+            <p><a href="./Marketing Resources/StrawQuestionnaire.html" target="_blank">STRAW questionnaire</a></p>
+        </div>
         <Footer>
             <p style="font-size: small">Last Update Dec 24 2024 // AH</p>
             <script type="text/javascript" src=""></script>
