--- a/Marketing Resources/StrawQuestionnaire.html
+++ b/Marketing Resources/StrawQuestionnaire.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./STRAW.css" type="text/css" rel="stylesheet">
-        <title>Checklist to Learn CHR Platform for New Concierges</title>
+        <title>Menopause Stage Quiz</title>
     </head>
 <main>
     <button class="homebutton"><a href="../index.html">Home</a></button>
@@ -33,7 +33,7 @@
             <p class="hidden" id="q1a2">You might be in the "Early" Mneopausal Transition Phase! Ocassionally, a blood test can determine if you are approaching early menopause. This can be sometimes be associated with symptoms such as hot flashes, and increased risk of heart or bone disease! <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
             <p class="hidden" id="q1a3">You might be in the "Late" Menopausal Transition Phase! Ocassionally, a blood test can determine if you are approaching early menopause. This can be sometimes be associated with symptoms such as hot flashes, and increased risk of heart or bone disease!  <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
             <p class="hidden" id="q1a4">This can be sometimes be associated with symptoms such as hot flashes, and increased risk of heart or bone disease! <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
-            <p class="hidden" id="q1a5">You are in the post-menopausal phase! Don't miss the chance to treat any symptoms of menopause, and to get ahead of your increased risk of heart or bone disease!<a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
+            <p class="hidden" id="q1a5">You are in the post-menopausal phase! Don't miss the chance to treat any symptoms of menopause, and to get ahead of your increased risk of heart or bone disease! <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
         </div>
     </div>
     <div class="questionbox">
