minor chanage to STRAW marketing questionnaire

--- a/Marketing Resources/StrawQuestionnaire.html
+++ b/Marketing Resources/StrawQuestionnaire.html
@@ -22,12 +22,14 @@
     <div class="questionbox">
         <h3>Question 1</h3>
         <p>One of the best ways to find out which stage you are at is by grading the regularity of your periods. For example, menopause is defined by doctors as the final menstrual period (FMP), and is identified as being the last period followed by 12 months of none whatsoever (AKA: "amenorrhea")</p>
+        <p>Which of the following best describes you at the moment?</p>
         <input type="radio" name="q1" id="q1_1" class="q1checkbox"> Regular periods, with roughly equal weeks between each <br>
         <input type="radio" name="q1" id="q1_2" class="q1checkbox"> Irregular periods, with more than 7 days of difference in length (eg: one period cycle lasting 2 weeks, the next 4 or 5 weeks, and so on) <br>
         <input type="radio" name="q1" id="q1_3" class="q1checkbox"> Skipped periods, with at least 60 days between two consecutive periods <br>
         <input type="radio" name="q1" id="q1_4" class="q1checkbox"> More than 3 months of skipped periods, but less than a full year <br>
         <input type="radio" name="q1" id="q1_5" class="q1checkbox"> A full year since the last menstrual period <br>
         <br>
+        
         <div class="hiddenanswer">
             <p class="hidden" id="q1a1">You are mostly likely in the "Repoductive" phase of your life, or STRAW stage -5 to -3. Ocassionally, a blood test can determine if you are approaching early menopause. <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians! </p>
             <p class="hidden" id="q1a2">You might be in the "Early" Mneopausal Transition Phase! Ocassionally, a blood test can determine if you are approaching early menopause. This can be sometimes be associated with symptoms such as hot flashes, and increased risk of heart or bone disease! <a href="https://www.bravellahealth.com">Click here</a> to book a screening appointment with one of our clinicians!</p>
