--- a/index.html
+++ b/index.html
@@ -47,23 +47,19 @@
        
         </div>
         <div>
-            <h3>Documents Remaining to be completed for Sprint 2:</h3>
-          
-        </div>
-        <div>
             <h3>Marketing Resources</h3>
             <p><a href="./Marketing Resources/StrawQuestionnaire.html" target="_blank">STRAW questionnaire</a></p>
         </div>
         <div>
             <h3>Onboarding Resources for Non-Clinical Staff</h3>
-            <p><a href="https://menopause.org/patient-education" target="_blank"></a>The Menopause Society Patient Education Site</p>
-            <p><a href="https://menopause.org/patient-education/menopause-topics" target="_blank"></a>The Menopause Society: Topics Section</p>
+            <p><a href="https://menopause.org/patient-education" target="_blank">The Menopause Society Patient Education Site</a></p>
+            <p><a href="https://menopause.org/patient-education/menopause-topics" target="_blank">The Menopause Society: Topics Section</a></p>
             <p><a href="https://www.priv.gc.ca/en/privacy-topics/privacy-laws-in-canada/the-personal-information-protection-and-electronic-documents-act-pipeda/" target="_blank">PIPEDA Act Website</a> and, in particular, <a href="https://www.priv.gc.ca/en/privacy-topics/privacy-laws-in-canada/the-personal-information-protection-and-electronic-documents-act-pipeda/pipeda_brief/" target="_blank">PIPEDA in brief section</a></p>
             <p><a href="https://www.heartandstroke.ca/women/womens-risk-factors" target="_blank">Heart and Stroke Foundation of Canada</a>, section on heart disease and menopause</p>
             <p><a href="https://osteoporosis.ca/about-the-disease/" target="_blank">Osteoporosis Canada</a>, section on "About the Disease"</p>
         </div>
         <Footer>
-            <p style="font-size: small">Last Update Dec 24 2024 // AH</p>
+            <p style="font-size: small">Last Update Jan 4 2025 // AH</p>
             <script type="text/javascript" src=""></script>
         </Footer>
     </body>
