changes to email template C1

--- a/Concierge Docs/EmailTemplateC1.html
+++ b/Concierge Docs/EmailTemplateC1.html
@@ -16,10 +16,10 @@
 <br>
 <p>Dear [Patient Name],</p>
 <p>Thank you for expressing interest in Bravella Health and for requesting a first appointment with our team. 
-    This initial appointment is complimentary and will be facilitated by our Concierge, [Your Name] during a video visit.  </p>
+    This initial appointment is complimentary and will be facilitated by our Concierge, [Your Name] during a video or telephone visit.  </p>
 <p>At this appointment, you will: </p>
 <ul>
-    <li>Learn more about our comprehensive Menopause Clinical Program</li>
+    <li>Learn more about our comprehensive Menopause Clinical Program and/or our Longevity Medicine program</li>
     <li>Discuss your specific health goals</li>
     <li>Ask any questions you may have about the program</li>
     <li>Officially enroll in the program if you choose to do so</li>
@@ -36,7 +36,7 @@
     You will receive an email with a link to your first concierge appointment within 24 hours of your selection being sent in. 
 </p>
 <p>
-    We are committed to providing personalized care and support throughout your menopause journey. We look forward to connecting with you soon and helping you achieve optimal health and well-being.
+    We are committed to providing personalized care and support throughout your healthcare journey. We look forward to connecting with you soon and helping you achieve optimal health and well-being.
 </p>
 <p>
     Best regards, <br>
