--- a/Concierge Docs/ConciergeOnboardingProcess.html
+++ b/Concierge Docs/ConciergeOnboardingProcess.html
@@ -10,23 +10,31 @@
     <h1>Onboarding Process - Concierge</h1>
     <p>Digital Assets Checklist</p>
     <ul>
-        <li><input type="checkbox"/>Bravella Email</li>
+        <li><input type="checkbox"/>Bravella Email and Google Workspace</li>
         <li><input type="checkbox"/>Access to CHR / Input Health Platform</li>
         <li><input type="checkbox"/>Access to HelloSign Template</li>
         <li><input type="checkbox"/>Access to Concierge Level Stripe Account</li>
+        <li><input type="checkbox"/>Access to Hubspot</li>
     </ul>
-    <p>Day 1 Activities</p>
+    <p>Tech Stack Introduction: 2 hours</p>
     <ul>
-        <li>Onboarding Call with Supervisor - 15-30 minutes</li>
         <li>Activate Access to Digital Assets</li>
         <li>Start Self-Learning of the CHR Platform using the <a href="./CHRBasics.html" target="_blank">documentation links</a> - 2-4 hours</li>
+        <li>Review of knowledge base with trainer</li>
         <li>Test of CHR Platform Knowledge: <br>
             <input type="checkbox" /> Create New Fake Patient Profile, use Concierge Name and Concierge Email Address <br>
-            <input type="checkbox" /> Open Scheduling Slot for Concierge Initial Appointment <br>
+            <input type="checkbox" /> Open "Flex Schedule" Slot of 4 hours length for Concierge Initial Appointment <br>
             <input type="checkbox" /> Schedule the Fake Patient in the Slot, send SMS and Email Confirmation <br>
             <input type="checkbox" /> Check Your Email to see if successful receipt of SMS and Email notification of appointment <br>
             <input type="checkbox" /> Delete the patient file, close the schedule slot <br>
         </li>
-        <li>Schedule: a) follow-up call with supervisor for questions and progress; b) Shadowing visit with supervisor / experienced Congierge for C1 visit tag-along</li>
+    </ul>
+    <p>Workflow Overview and Mock Training Calls: 2 hours</p>
+    <ul>
+        <li><input type="checkbox" /> Review the Door-to-Funnel Process</li>
+        <li><input type="checkbox" /> Create Mock Welcome Email in CHR using DTF template</li>
+        <li><input type="checkbox" /> Call up patient to discuss the process</li>
+        <li><input type="checkbox" /> Book with NP</li>
+        <li><input type="checkbox" /> Review NP Note and Schedule Appointment 2</li>
     </ul>
 </main>
