minor edit to chr basics

--- a/Concierge Docs/C1toNP1.html
+++ b/Concierge Docs/C1toNP1.html
@@ -10,12 +10,25 @@
     <button class="homebutton"><a href="../index.html">Home</a></button>
     <h1>C1 to NP1 Checklist</h1>
     <h2>Authors: Adam Hofmann, Jesse Bawden</h2>
-    <h2>Last Update: Dec 19 2024</h2>
+    <h2>Last Update: Feb 27 2025</h2>
 
     <h2>Checklist</h2>
     <input type="checkbox">1. Schedule the NP1 visit with the patient</input><br>
     <input type="checkbox">2. Ensure that the Qnaires: __ , ___, ___, are sent</input><br>
     <input type="checkbox">3. Update the patient chart with certain responses from the Qnaire ____ including the patient medication list and the past medical history</input><br>
+    <input type="checkbox">2. Ensure that patient chart is updated with the OHIP medical insurance card information:</input><br>
+        <h3>Steps:</h3>
+            <p>1) patient dashboard, then</p>
+            <p>2) identifications, then</p>
+            <p>3) manage identifications, then</p>
+            <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/OHIP card updating_1.png" />
+            <p>4) add new identification, then</p>
+            <p>5) set as primary </p>
+            <img src="../Resources/Assets/Concierge Images/Door to First Visit Images/OHIP card updating_2.png" />
+
+
+       
+            
 
 
    
