--- a/Concierge Docs/CHRBasics.html
+++ b/Concierge Docs/CHRBasics.html
@@ -51,5 +51,8 @@
             <a href="https://help.inputhealth.com/en/articles/1461593-sending-messages-to-patients" target="_blank"> Sending Messages to Patients</a> <br>  
             <a href="https://intercom.help/inputhealth/en/articles/5698674-instant-chat" target="_blank">  Instant Chat </a> <br>       
         </li>
+        <li>
+            <p>Using the Admin notes section to track progress with tasks on a given patient</p>
+        </li>
     </ol>
 </main>
